# suit-manifest-generator

./: Cargo.toml
src/: cbor.rs  main.rs  payload.rs  suit_constant.rs
src/payload/: compression.rs
src/payload/compression/: default_model.rs
