[package]
name = "SuitManigestGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
regex = "1.5.5"
hex = "0.4.3"
openssl = "0.10.40"
clap = { version = "3.1.18", features = ["derive"] }
